--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,20 @@
 .project
 .settings/
 target/
-sql/librosdb-data.sql
+
+# built application files
+*.apk
+*.ap_
+ 
+# files for the dex VM
+*.dex
+ 
+# Java class files
+*.class
+ 
+# generated files
+bin/
+gen/
+ 
+# Local configuration file (sdk path, etc)
+local.properties
