--- a/libros-server/libros-api/src/main/webapp/WEB-INF/web.xml
+++ b/libros-server/libros-api/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,113 @@
 		<servlet-name>Libros-API</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+	 <filter>
+		
+		<filter-name>CORS</filter-name>
+		<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+
+		<init-param>
+			<param-name>cors.allowGenericHttpRequests</param-name>
+			<param-value>true</param-value>
+		</init-param>
+
+		<init-param>
+			<param-name>cors.allowOrigin</param-name>
+			<param-value>*</param-value>
+		</init-param>
+
+		<init-param>
+			<param-name>cors.allowSubdomains</param-name>
+			<param-value>false</param-value>
+		</init-param>
+
+		<init-param>
+			<param-name>cors.supportedMethods</param-name>
+			<param-value>GET, HEAD, POST, OPTIONS, PUT, DELETE</param-value>
+		</init-param>
+
+		<init-param>
+			<param-name>cors.supportedHeaders</param-name>
+			<param-value>*</param-value>
+		</init-param>
+
+		<init-param>
+			<param-name>cors.exposedHeaders</param-name>
+			<param-value>Content-Type, Access-Control-Allow-Origin,Access-Control-Allow-Credentials</param-value>
+		</init-param>
+
+		<init-param>
+			<param-name>cors.supportsCredentials</param-name>
+			<param-value>true</param-value>
+		</init-param>
+
+		<init-param>
+			<param-name>cors.maxAge</param-name>
+			<param-value>3600</param-value>
+		</init-param>
+
+	</filter>
+
+	<filter-mapping>
+		<filter-name>CORS</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<login-config>
+		<auth-method>BASIC</auth-method>
+	</login-config>
+	<security-role>
+		<role-name>administrador</role-name>
+	</security-role>
+	<security-role>
+		<role-name>registrado</role-name>
+	</security-role>
+	
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>LibrosRootAPI</web-resource-name>
+			<url-pattern>/*</url-pattern>
+		</web-resource-collection>
+
+	</security-constraint>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Libros</web-resource-name>
+			<url-pattern>/libros</url-pattern>
+			<http-method>POST</http-method>
+			<http-method>PUT</http-method> 
+			<http-method>DELETE</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>administrador</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Libros</web-resource-name>
+			<url-pattern>/libros/*</url-pattern>
+			<http-method>GET</http-method>
+		</web-resource-collection>
+	</security-constraint>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Opiniones</web-resource-name>
+			<url-pattern>/opiniones/*</url-pattern>
+			<http-method>PUT</http-method>
+			<http-method>POST</http-method>
+			<http-method>DELETE</http-method>
+		</web-resource-collection>
+		 <auth-constraint>
+			<role-name>registrado</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Opinion</web-resource-name>
+			<url-pattern>/opiniones/*</url-pattern>
+			<http-method>GET</http-method>
+		</web-resource-collection>
+	</security-constraint>
 </web-app>
