--- a/libros-server/libros-api/src/main/webapp/WEB-INF/web.xml
+++ b/libros-server/libros-api/src/main/webapp/WEB-INF/web.xml
@@ -94,13 +94,14 @@
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Libros</web-resource-name>
-			<url-pattern>/libros</url-pattern>
+			<url-pattern>/libros/*</url-pattern>
 			<http-method>POST</http-method>
 			<http-method>PUT</http-method> 
 			<http-method>DELETE</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>administrador</role-name>
+			<role-name>registrado</role-name>
 		</auth-constraint>
 	</security-constraint>
 	<security-constraint>
